@@ -2,16 +2,18 @@ package com.wtm.spring_boot_wtm.service;
 
 import com.wtm.spring_boot_wtm.model.Favorite;
 import com.wtm.spring_boot_wtm.repository.IFavoriteRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class FavoriteService {
 
-    @Autowired
+    
     private IFavoriteRepository favoriteRepository;
+
+    FavoriteService(IFavoriteRepository favoriteRepository) {
+        this.favoriteRepository = favoriteRepository;
+    }
 
     public void addFavorite(String userId, Long barsId) {
         Favorite favorite = new Favorite();
@@ -24,7 +26,7 @@ public class FavoriteService {
     public List<Long> getFavoriteBarsIdsByUser(String userId) {
         return favoriteRepository.findByUserId(userId).stream()
                 .map(Favorite::getBarsId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
